--- a/features/element-timing.yml
+++ b/features/element-timing.yml
@@ -1,7 +1,7 @@
-draft_date: 2024-09-09
-name: Element Timing API
-description: TODO
+name: Element timing
+description: The `element` performance entry and the `PerformanceElementTiming` API measures the time to render elements that have the `elementtiming` attribute.
 spec: https://wicg.github.io/element-timing/
+group: performance
 compat_features:
   - api.Element.elementTiming
   - api.PerformanceElementTiming
