--- a/features/navigation-timing.yml
+++ b/features/navigation-timing.yml
@@ -1,7 +1,9 @@
-draft_date: 2024-09-09
-name: Navigation Timing Level 2
-description: TODO
+name: Navigation timing
+description: The `navigation` performance entry and the `PerformanceNavigationTiming` API measures navigation events, such as loading time or the number of redirects.
 spec: https://w3c.github.io/navigation-timing/
+group: performance
+status:
+  compute_from: api.PerformanceNavigationTiming
 compat_features:
   - api.PerformanceNavigationTiming
   - api.PerformanceNavigationTiming.criticalCHRestart
@@ -11,7 +13,6 @@ compat_features:
   - api.PerformanceNavigationTiming.domInteractive
   - api.PerformanceNavigationTiming.loadEventEnd
   - api.PerformanceNavigationTiming.loadEventStart
-  - api.PerformanceNavigationTiming.notRestoredReasons
   - api.PerformanceNavigationTiming.redirectCount
   - api.PerformanceNavigationTiming.toJSON
   - api.PerformanceNavigationTiming.type
