--- a/features/resource-timing.yml.dist
+++ b/features/resource-timing.yml.dist
@@ -6,14 +6,15 @@ status:
   baseline_low_date: 2017-09-19
   baseline_high_date: 2020-03-19
   support:
-    chrome: "43"
-    chrome_android: "43"
+    chrome: "29"
+    chrome_android: "29"
     edge: "12"
     firefox: "35"
     firefox_android: "35"
     safari: "11"
     safari_ios: "11"
 compat_features:
+  # ⬇️ Same status as overall feature ⬇️
   # baseline: high
   # baseline_low_date: 2017-09-19
   # baseline_high_date: 2020-03-19
@@ -27,7 +28,6 @@ compat_features:
   #   safari_ios: "11"
   - api.PerformanceResourceTiming
 
-  # ⬇️ Same status as overall feature ⬇️
   # baseline: high
   # baseline_low_date: 2017-09-19
   # baseline_high_date: 2020-03-19
@@ -50,3 +50,101 @@ compat_features:
   - api.PerformanceResourceTiming.requestStart
   - api.PerformanceResourceTiming.responseEnd
   - api.PerformanceResourceTiming.responseStart
+
+  # baseline: high
+  # baseline_low_date: 2017-10-17
+  # baseline_high_date: 2020-04-17
+  # support:
+  #   chrome: "45"
+  #   chrome_android: "45"
+  #   edge: "16"
+  #   firefox: "35"
+  #   firefox_android: "35"
+  #   safari: "11"
+  #   safari_ios: "11"
+  - api.PerformanceResourceTiming.toJSON
+
+  # baseline: high
+  # baseline_low_date: 2018-01-23
+  # baseline_high_date: 2020-07-23
+  # support:
+  #   chrome: "46"
+  #   chrome_android: "46"
+  #   edge: "16"
+  #   firefox: "58"
+  #   firefox_android: "58"
+  #   safari: "11"
+  #   safari_ios: "11"
+  - api.PerformanceResourceTiming.workerStart
+
+  # baseline: high
+  # baseline_low_date: 2018-04-30
+  # baseline_high_date: 2020-10-30
+  # support:
+  #   chrome: "61"
+  #   chrome_android: "61"
+  #   edge: "17"
+  #   firefox: "45"
+  #   firefox_android: "45"
+  #   safari: "11"
+  #   safari_ios: "11"
+  - api.PerformanceResourceTiming.nextHopProtocol
+
+  # baseline: high
+  # baseline_low_date: 2018-10-02
+  # baseline_high_date: 2021-04-02
+  # support:
+  #   chrome: "43"
+  #   chrome_android: "43"
+  #   edge: "18"
+  #   firefox: "35"
+  #   firefox_android: "35"
+  #   safari: "11"
+  #   safari_ios: "11"
+  - api.PerformanceResourceTiming.secureConnectionStart
+
+  # baseline: false
+  # support:
+  #   chrome: "43"
+  #   chrome_android: "43"
+  #   edge: "15"
+  #   firefox: "60"
+  #   firefox_android: "60"
+  #   safari: "12"
+  - api.PerformanceResourceTiming.worker_support
+
+  # baseline: false
+  # support:
+  #   chrome: "109"
+  #   chrome_android: "109"
+  #   edge: "109"
+  #   firefox: "129"
+  #   firefox_android: "129"
+  - api.PerformanceResourceTiming.responseStatus
+
+  # baseline: false
+  # support:
+  #   chrome: "107"
+  #   chrome_android: "107"
+  #   edge: "107"
+  - api.PerformanceResourceTiming.renderBlockingStatus
+
+  # baseline: false
+  # support:
+  #   chrome: "115"
+  #   chrome_android: "115"
+  #   edge: "115"
+  - api.PerformanceResourceTiming.firstInterimResponseStart
+
+  # baseline: false
+  # support:
+  #   chrome: "117"
+  #   chrome_android: "117"
+  #   edge: "117"
+  - api.PerformanceResourceTiming.deliveryType
+
+  # baseline: false
+  # support:
+  #   firefox: "129"
+  #   firefox_android: "129"
+  - api.PerformanceResourceTiming.contentType
