--- a/features/xhr.yml.dist
+++ b/features/xhr.yml.dist
@@ -351,6 +351,35 @@ compat_features:
   - api.FormData.set
 
   # baseline: high
+  # baseline_low_date: 2018-10-02
+  # baseline_high_date: 2021-04-02
+  # support:
+  #   chrome: "50"
+  #   chrome_android: "50"
+  #   edge: "18"
+  #   firefox: "44"
+  #   firefox_android: "44"
+  #   safari: "11.1"
+  #   safari_ios: "11.3"
+  - api.FormData.@@iterator
+  - api.FormData.entries
+  - api.FormData.keys
+  - api.FormData.values
+
+  # baseline: high
+  # baseline_low_date: 2018-10-02
+  # baseline_high_date: 2021-04-02
+  # support:
+  #   chrome: "50"
+  #   chrome_android: "50"
+  #   edge: "18"
+  #   firefox: "47"
+  #   firefox_android: "47"
+  #   safari: "11.1"
+  #   safari_ios: "11.3"
+  - api.FormData.forEach
+
+  # baseline: high
   # baseline_low_date: 2020-01-15
   # baseline_high_date: 2022-07-15
   # support:
@@ -377,6 +406,19 @@ compat_features:
   - api.XMLHttpRequest.getAllResponseHeaders.header_names_lowercase
 
   # baseline: high
+  # baseline_low_date: 2020-03-24
+  # baseline_high_date: 2022-09-24
+  # support:
+  #   chrome: "50"
+  #   chrome_android: "50"
+  #   edge: "79"
+  #   firefox: "39"
+  #   firefox_android: "39"
+  #   safari: "13.1"
+  #   safari_ios: "13.4"
+  - api.FormData.worker_support
+
+  # baseline: high
   # baseline_low_date: 2021-09-20
   # baseline_high_date: 2024-03-20
   # support:
@@ -388,6 +430,18 @@ compat_features:
   #   safari: "15"
   #   safari_ios: "15"
   - api.XMLHttpRequest.send.body_URLSearchParams_type
+
+  # baseline: low
+  # baseline_low_date: 2023-04-06
+  # support:
+  #   chrome: "112"
+  #   chrome_android: "112"
+  #   edge: "112"
+  #   firefox: "111"
+  #   firefox_android: "111"
+  #   safari: "16.4"
+  #   safari_ios: "16.4"
+  - api.FormData.FormData.submitter
 
   # baseline: false
   # support:
