Add a key to web-midi

--- a/features/web-midi.yml
+++ b/features/web-midi.yml
@@ -51,5 +51,6 @@ compat_features:
   - api.MIDIPort.type
   - api.MIDIPort.version
   - api.Navigator.requestMIDIAccess
+  - api.Navigator.requestMIDIAccess.secure_context_required
   - api.Permissions.permission_midi
   - http.headers.Permissions-Policy.midi
