--- a/features/web-midi.yml.dist
+++ b/features/web-midi.yml.dist
@@ -70,6 +70,7 @@ compat_features:
   - api.MIDIPort.type
   - api.MIDIPort.version
   - api.Navigator.requestMIDIAccess
+  - api.Navigator.requestMIDIAccess.secure_context_required
 
   # baseline: false
   # support:
