Add more keys to WebHID

--- a/features/webhid.yml.dist
+++ b/features/webhid.yml.dist
@@ -46,5 +46,15 @@ compat_features:
   - api.Navigator.hid
 
   # baseline: false
+  # support:
+  #   chrome: "100"
+  #   edge: "100"
+  - api.HIDDevice.forget
+
+  # baseline: false
   # support: {}
+  - api.HID.worker_support
+  - api.HIDConnectionEvent.worker_support
+  - api.HIDDevice.worker_support
+  - api.HIDInputReportEvent.worker_support
   - api.WorkerNavigator.hid
