--- a/features/web-cryptography.yml
+++ b/features/web-cryptography.yml
@@ -11,6 +11,7 @@ compat_features:
   - api.Crypto.getRandomValues
   - api.Crypto.randomUUID
   - api.Crypto.subtle
+  - api.Crypto.subtle.secure_context_required
   - api.CryptoKey
   - api.CryptoKey.algorithm
   - api.CryptoKey.extractable
@@ -19,28 +20,31 @@ compat_features:
   - api.SubtleCrypto
   - api.SubtleCrypto.decrypt
   - api.SubtleCrypto.deriveBits
+  - api.SubtleCrypto.deriveBits.x25519
   - api.SubtleCrypto.deriveKey
   - api.SubtleCrypto.deriveKey.derivedKeyAlgorithm_option_aes
   - api.SubtleCrypto.deriveKey.derivedKeyAlgorithm_option_hkdf
   - api.SubtleCrypto.deriveKey.derivedKeyAlgorithm_option_hmac
   - api.SubtleCrypto.deriveKey.derivedKeyAlgorithm_option_pbkdf2
+  - api.SubtleCrypto.deriveKey.x25519
   - api.SubtleCrypto.digest
   - api.SubtleCrypto.encrypt
   - api.SubtleCrypto.exportKey
+  - api.SubtleCrypto.exportKey.ed25519
+  - api.SubtleCrypto.exportKey.x25519
   - api.SubtleCrypto.generateKey
+  - api.SubtleCrypto.generateKey.ed25519
+  - api.SubtleCrypto.generateKey.x25519
   - api.SubtleCrypto.importKey
+  - api.SubtleCrypto.importKey.ed25519
+  - api.SubtleCrypto.importKey.x25519
+  - api.SubtleCrypto.secure_context_required
   - api.SubtleCrypto.sign
+  - api.SubtleCrypto.sign.ed25519
   - api.SubtleCrypto.unwrapKey
   - api.SubtleCrypto.verify
-  - api.SubtleCrypto.wrapKey
-  - api.SubtleCrypto.exportKey.ed25519
-  - api.SubtleCrypto.generateKey.ed25519
-  - api.SubtleCrypto.importKey.ed25519
-  - api.SubtleCrypto.sign.ed25519
   - api.SubtleCrypto.verify.ed25519
-  - api.SubtleCrypto.deriveBits.x25519
-  - api.SubtleCrypto.deriveKey.x25519
-  - api.SubtleCrypto.exportKey.x25519
-  - api.SubtleCrypto.generateKey.x25519
-  - api.SubtleCrypto.importKey.x25519
+  - api.SubtleCrypto.worker_support
+  - api.SubtleCrypto.wrapKey
   - api.crypto
+  - api.crypto.worker_support
