--- a/features/web-audio.yml
+++ b/features/web-audio.yml
@@ -37,15 +37,22 @@ compat_features:
   - api.AudioBufferSourceNode.start
   - api.AudioContext
   - api.AudioContext.AudioContext
+  - api.AudioContext.AudioContext.options_latencyHint_parameter
+  - api.AudioContext.AudioContext.options_sampleRate_parameter
+  - api.AudioContext.AudioContext.options_sinkId_parameter
   - api.AudioContext.baseLatency
   - api.AudioContext.close
   - api.AudioContext.createMediaElementSource
   - api.AudioContext.createMediaStreamDestination
   - api.AudioContext.createMediaStreamSource
   - api.AudioContext.createMediaStreamTrackSource
+  - api.AudioContext.error_event
   - api.AudioContext.getOutputTimestamp
   - api.AudioContext.outputLatency
   - api.AudioContext.resume
+  - api.AudioContext.setSinkId
+  - api.AudioContext.sinkId
+  - api.AudioContext.sinkchange_event
   - api.AudioContext.suspend
   - api.AudioDestinationNode
   - api.AudioDestinationNode.maxChannelCount
@@ -66,6 +73,8 @@ compat_features:
   - api.AudioNode.connect
   - api.AudioNode.context
   - api.AudioNode.disconnect
+  - api.AudioNode.disconnect.destination_parameter
+  - api.AudioNode.disconnect.input_parameter
   - api.AudioNode.numberOfInputs
   - api.AudioNode.numberOfOutputs
   - api.AudioParam
@@ -82,10 +91,20 @@ compat_features:
   - api.AudioParam.setValueCurveAtTime
   - api.AudioParam.value
   - api.AudioParamMap
+  - api.AudioParamMap.@@iterator
+  - api.AudioParamMap.entries
+  - api.AudioParamMap.forEach
+  - api.AudioParamMap.get
+  - api.AudioParamMap.has
+  - api.AudioParamMap.keys
+  - api.AudioParamMap.size
+  - api.AudioParamMap.values
   - api.AudioScheduledSourceNode
   - api.AudioScheduledSourceNode.ended_event
   - api.AudioScheduledSourceNode.start
   - api.AudioScheduledSourceNode.stop
+  - api.AudioSinkInfo
+  - api.AudioSinkInfo.type
   - api.BaseAudioContext
   - api.BaseAudioContext.createAnalyser
   - api.BaseAudioContext.createBiquadFilter
@@ -102,10 +121,12 @@ compat_features:
   - api.BaseAudioContext.createOscillator
   - api.BaseAudioContext.createPanner
   - api.BaseAudioContext.createPeriodicWave
+  - api.BaseAudioContext.createPeriodicWave.constraints_disableNormalization_parameter
   - api.BaseAudioContext.createStereoPanner
   - api.BaseAudioContext.createWaveShaper
   - api.BaseAudioContext.currentTime
   - api.BaseAudioContext.decodeAudioData
+  - api.BaseAudioContext.decodeAudioData.returns_promise
   - api.BaseAudioContext.destination
   - api.BaseAudioContext.listener
   - api.BaseAudioContext.sampleRate
