--- a/features/web-nfc.yml
+++ b/features/web-nfc.yml
@@ -2,3 +2,31 @@ name: Web NFC
 description: The `NDEFReader` API reads and writes messages to near-field communication (NFC) tags.
 spec: https://w3c.github.io/web-nfc/
 caniuse: webnfc
+compat_features:
+  - api.NDEFMessage
+  - api.NDEFMessage.NDEFMessage
+  - api.NDEFMessage.records
+  - api.NDEFMessage.secure_context_required
+  - api.NDEFReader
+  - api.NDEFReader.NDEFReader
+  - api.NDEFReader.makeReadOnly
+  - api.NDEFReader.reading_event
+  - api.NDEFReader.readingerror_event
+  - api.NDEFReader.scan
+  - api.NDEFReader.secure_context_required
+  - api.NDEFReader.write
+  - api.NDEFReadingEvent
+  - api.NDEFReadingEvent.NDEFReadingEvent
+  - api.NDEFReadingEvent.message
+  - api.NDEFReadingEvent.secure_context_required
+  - api.NDEFReadingEvent.serialNumber
+  - api.NDEFRecord
+  - api.NDEFRecord.NDEFRecord
+  - api.NDEFRecord.data
+  - api.NDEFRecord.encoding
+  - api.NDEFRecord.id
+  - api.NDEFRecord.lang
+  - api.NDEFRecord.mediaType
+  - api.NDEFRecord.recordType
+  - api.NDEFRecord.secure_context_required
+  - api.NDEFRecord.toRecords
