--- a/features/layout-direction-override.yml
+++ b/features/layout-direction-override.yml
@@ -1,5 +1,5 @@
 name: Layout direction override
-description: The `unicode-bidi` and `direction` CSS properties override the Unicode layout algorithm, and is intended for Document Type Definition (DTD) designers. For HTML documents, authors should use the `dir` global HTML attribute and `<bdo>` HTML element instead.
+description: The `unicode-bidi` and `direction` CSS properties override the Unicode layout algorithm. They are intended for Document Type Definition (DTD) designers. For HTML documents, you should use the `dir` global HTML attribute and `<bdo>` HTML element instead.
 spec:
   - https://drafts.csswg.org/css-writing-modes-4/#direction
   - https://drafts.csswg.org/css-writing-modes-4/#unicode-bidi
