--- a/features/url.yml.dist
+++ b/features/url.yml.dist
@@ -101,6 +101,7 @@ compat_features:
   #   safari_ios: "10.3"
   - api.URLSearchParams
   - api.URLSearchParams.URLSearchParams
+  - api.URLSearchParams.URLSearchParams.USVString
   - api.URLSearchParams.append
   - api.URLSearchParams.get
   - api.URLSearchParams.getAll
@@ -142,6 +143,19 @@ compat_features:
   # baseline_low_date: 2018-04-30
   # baseline_high_date: 2020-10-30
   # support:
+  #   chrome: "58"
+  #   chrome_android: "58"
+  #   edge: "17"
+  #   firefox: "53"
+  #   firefox_android: "53"
+  #   safari: "11"
+  #   safari_ios: "11"
+  - api.URLSearchParams.URLSearchParams.sequence
+
+  # baseline: high
+  # baseline_low_date: 2018-04-30
+  # baseline_high_date: 2020-10-30
+  # support:
   #   chrome: "61"
   #   chrome_android: "61"
   #   edge: "17"
@@ -149,6 +163,7 @@ compat_features:
   #   firefox_android: "54"
   #   safari: "11"
   #   safari_ios: "11"
+  - api.URLSearchParams.URLSearchParams.record
   - api.URLSearchParams.sort
 
   # baseline: high
@@ -201,6 +216,19 @@ compat_features:
   #   safari: "17"
   #   safari_ios: "17"
   - api.URLSearchParams.size
+
+  # baseline: low
+  # baseline_low_date: 2023-09-18
+  # support:
+  #   chrome: "117"
+  #   chrome_android: "117"
+  #   edge: "117"
+  #   firefox: "115"
+  #   firefox_android: "115"
+  #   safari: "17"
+  #   safari_ios: "17"
+  - api.URLSearchParams.delete.value_parameter
+  - api.URLSearchParams.has.value_parameter
 
   # baseline: low
   # baseline_low_date: 2024-09-16
