Add more keys to SMIL SVG Animations

--- a/features/smil-svg-animations.yml
+++ b/features/smil-svg-animations.yml
@@ -72,6 +72,10 @@ compat_features:
   - api.SVGSVGElement.animationsPaused
   - api.SVGSVGElement.pauseAnimations
   - api.SVGSVGElement.unpauseAnimations
+  - api.TimeEvent
+  - api.TimeEvent.detail
+  - api.TimeEvent.initTimeEvent
+  - api.TimeEvent.view
   - svg.elements.animate
   - svg.elements.animate.attributeName
   - svg.elements.animate.attributeType
