--- a/features/animations-css.yml
+++ b/features/animations-css.yml
@@ -27,6 +27,7 @@ compat_features:
   - api.CSSKeyframesRule.name
   - css.at-rules.keyframes
   - css.at-rules.keyframes.named_range_keyframes
+  - css.at-rules.keyframes.ignore_important_declarations
   - css.properties.animation
   - css.properties.animation-delay
   - css.properties.animation-direction
