--- a/features/animations-css.yml.dist
+++ b/features/animations-css.yml.dist
@@ -123,6 +123,19 @@ compat_features:
   - api.AnimationEvent.AnimationEvent
 
   # baseline: high
+  # baseline_low_date: 2020-01-15
+  # baseline_high_date: 2022-07-15
+  # support:
+  #   chrome: "45"
+  #   chrome_android: "45"
+  #   edge: "79"
+  #   firefox: "19"
+  #   firefox_android: "19"
+  #   safari: "10.1"
+  #   safari_ios: "10.3"
+  - css.at-rules.keyframes.ignore_important_declarations
+
+  # baseline: high
   # baseline_low_date: 2020-03-24
   # baseline_high_date: 2022-09-24
   # support:
