--- a/features/storage-access.yml
+++ b/features/storage-access.yml
@@ -8,4 +8,6 @@ compat_features:
   - api.Document.hasStorageAccess
   - api.Document.requestStorageAccess
   - api.Document.requestStorageAccessFor
+  - api.Permissions.permission_storage-access
   - api.Permissions.permission_top-level-storage-access
+  - http.headers.Permissions-Policy.storage-access
