Add more keys to transform features

--- a/features/individual-transforms.yml
+++ b/features/individual-transforms.yml
@@ -4,6 +4,7 @@ spec: https://drafts.csswg.org/css-transforms-2/#individual-transforms
 group: transforms
 compat_features:
   - css.properties.rotate
+  - css.properties.rotate.x_y_z_angle
   - css.properties.scale
   - css.properties.translate
   - css.properties.rotate.none
