--- a/features/individual-transforms.yml.dist
+++ b/features/individual-transforms.yml.dist
@@ -15,6 +15,7 @@ status:
 compat_features:
   - css.properties.rotate
   - css.properties.rotate.none
+  - css.properties.rotate.x_y_z_angle
   - css.properties.scale
   - css.properties.scale.none
   - css.properties.translate
