--- a/features/transforms2d.yml
+++ b/features/transforms2d.yml
@@ -25,3 +25,4 @@ compat_features:
   - css.properties.transform-origin.left
   - css.properties.transform-origin.right
   - css.properties.transform-origin.top
+  - css.properties.transform-origin.three_value_syntax
