--- a/features/transforms2d.yml.dist
+++ b/features/transforms2d.yml.dist
@@ -64,6 +64,7 @@ compat_features:
   #   safari: "9"
   #   safari_ios: "9"
   - css.properties.transform-origin
+  - css.properties.transform-origin.three_value_syntax
 
   # baseline: high
   # baseline_low_date: 2020-07-28
