Add additional cursor keys

--- a/features/cursor.yml
+++ b/features/cursor.yml
@@ -42,6 +42,8 @@ compat_features:
   - css.properties.cursor.se-resize
   - css.properties.cursor.sw-resize
   - css.properties.cursor.text
+  - css.properties.cursor.url
+  - css.properties.cursor.url_positioning_syntax
   - css.properties.cursor.vertical-text
   - css.properties.cursor.w-resize
   - css.properties.cursor.wait
