--- a/features/draft/spec/css-ui-4.yml
+++ b/features/draft/spec/css-ui-4.yml
@@ -1,10 +1,8 @@
-draft_date: 2024-10-21
+draft_date: 2024-10-22
 name: CSS Basic User Interface Module Level 4
 description: TODO
 spec: https://drafts.csswg.org/css-ui-4/
 compat_features:
-  - css.properties.cursor.url
-  - css.properties.cursor.url_positioning_syntax
   - css.properties.pointer-events
   - css.properties.pointer-events.html_elements
 
@@ -62,6 +60,8 @@ compat_features:
 #   - css.properties.cursor.se-resize
 #   - css.properties.cursor.sw-resize
 #   - css.properties.cursor.text
+#   - css.properties.cursor.url
+#   - css.properties.cursor.url_positioning_syntax
 #   - css.properties.cursor.vertical-text
 #   - css.properties.cursor.w-resize
 #   - css.properties.cursor.wait
