--- a/features/cursor.yml.dist
+++ b/features/cursor.yml.dist
@@ -51,6 +51,7 @@ compat_features:
   #   safari: "3"
   #   safari_ios: "13.4"
   - css.properties.cursor.cell
+  - css.properties.cursor.url
 
   # baseline: false
   # support:
@@ -97,6 +98,16 @@ compat_features:
   - css.properties.cursor.nwse-resize
   - css.properties.cursor.row-resize
   - css.properties.cursor.vertical-text
+
+  # baseline: false
+  # support:
+  #   chrome: "1"
+  #   chrome_android: "18"
+  #   edge: "79"
+  #   firefox: "1.5"
+  #   firefox_android: "95"
+  #   safari: "3"
+  - css.properties.cursor.url_positioning_syntax
 
   # baseline: false
   # support:
