Add a key to Shared Storage

--- a/features/shared-storage.yml
+++ b/features/shared-storage.yml
@@ -27,6 +27,7 @@ compat_features:
   - api.WindowSharedStorage.selectURL
   - api.WindowSharedStorage.worklet
   - api.WorkletSharedStorage
+  - api.WorkletSharedStorage.@@asyncIterator
   - api.WorkletSharedStorage.entries
   - api.WorkletSharedStorage.get
   - api.WorkletSharedStorage.keys
