Add more Active View Transition keys

--- a/features/active-view-transition.yml
+++ b/features/active-view-transition.yml
@@ -7,5 +7,15 @@ group:
 compat_features:
   - api.ViewTransition.types
   - api.ViewTransitionTypeSet
+  - api.ViewTransitionTypeSet.@@iterator
+  - api.ViewTransitionTypeSet.add
+  - api.ViewTransitionTypeSet.clear
+  - api.ViewTransitionTypeSet.delete
+  - api.ViewTransitionTypeSet.entries
+  - api.ViewTransitionTypeSet.forEach
+  - api.ViewTransitionTypeSet.has
+  - api.ViewTransitionTypeSet.keys
+  - api.ViewTransitionTypeSet.size
+  - api.ViewTransitionTypeSet.values
   - css.selectors.active-view-transition
   - css.selectors.active-view-transition-type
