--- a/features/active-view-transition.yml.dist
+++ b/features/active-view-transition.yml.dist
@@ -25,4 +25,14 @@ compat_features:
   #   edge: "125"
   - api.ViewTransition.types
   - api.ViewTransitionTypeSet
+  - api.ViewTransitionTypeSet.@@iterator
+  - api.ViewTransitionTypeSet.add
+  - api.ViewTransitionTypeSet.clear
+  - api.ViewTransitionTypeSet.delete
+  - api.ViewTransitionTypeSet.entries
+  - api.ViewTransitionTypeSet.forEach
+  - api.ViewTransitionTypeSet.has
+  - api.ViewTransitionTypeSet.keys
+  - api.ViewTransitionTypeSet.size
+  - api.ViewTransitionTypeSet.values
   - css.selectors.active-view-transition-type
