break some bits out

--- a/features/dom.yml
+++ b/features/dom.yml
@@ -1,5 +1,4 @@
-draft_date: 2024-09-30
-name: DOM Standard
+name: DOM
 description: TODO
 spec: https://dom.spec.whatwg.org/
 compat_features:
@@ -27,9 +26,6 @@ compat_features:
   - api.CharacterData.substringData
   - api.Comment
   - api.Comment.Comment
-  - api.CustomEvent
-  - api.CustomEvent.CustomEvent
-  - api.CustomEvent.detail
   - api.DOMImplementation
   - api.DOMImplementation.createDocument
   - api.DOMImplementation.createDocumentType
@@ -45,156 +41,10 @@ compat_features:
   - api.DOMTokenList.toString
   - api.DOMTokenList.toggle
   - api.DOMTokenList.value
-  - api.Document
-  - api.Document.Document
-  - api.Document.URL
-  - api.Document.adoptNode
-  - api.Document.append
-  - api.Document.characterSet
-  - api.Document.childElementCount
-  - api.Document.children
-  - api.Document.compatMode
-  - api.Document.contentType
-  - api.Document.createAttribute
-  - api.Document.createAttributeNS
-  - api.Document.createCDATASection
-  - api.Document.createComment
-  - api.Document.createDocumentFragment
-  - api.Document.createElement
-  - api.Document.createElementNS
-  - api.Document.createEvent
-  - api.Document.createExpression
-  - api.Document.createNodeIterator
-  - api.Document.createProcessingInstruction
-  - api.Document.createTextNode
-  - api.Document.createTreeWalker
-  - api.Document.doctype
-  - api.Document.documentElement
-  - api.Document.documentURI
-  - api.Document.firstElementChild
-  - api.Document.getElementById
-  - api.Document.getElementsByClassName
-  - api.Document.getElementsByTagName
-  - api.Document.getElementsByTagNameNS
-  - api.Document.implementation
-  - api.Document.importNode
-  - api.Document.lastElementChild
-  - api.Document.prepend
-  - api.Document.querySelector
-  - api.Document.querySelectorAll
-  - api.Document.replaceChildren
-  - api.DocumentFragment
-  - api.DocumentFragment.DocumentFragment
-  - api.DocumentFragment.append
-  - api.DocumentFragment.childElementCount
-  - api.DocumentFragment.children
-  - api.DocumentFragment.firstElementChild
-  - api.DocumentFragment.getElementById
-  - api.DocumentFragment.lastElementChild
-  - api.DocumentFragment.prepend
-  - api.DocumentFragment.querySelector
-  - api.DocumentFragment.querySelectorAll
-  - api.DocumentFragment.replaceChildren
-  - api.DocumentType
-  - api.DocumentType.after
-  - api.DocumentType.before
-  - api.DocumentType.name
-  - api.DocumentType.publicId
-  - api.DocumentType.remove
-  - api.DocumentType.replaceWith
-  - api.DocumentType.systemId
-  - api.Element
-  - api.Element.after
-  - api.Element.append
-  - api.Element.attachShadow.options_clonable_parameter
-  - api.Element.attachShadow.options_delegatesFocus_parameter
-  - api.Element.attachShadow.options_serializable_parameter
-  - api.Element.attributes
-  - api.Element.before
-  - api.Element.childElementCount
-  - api.Element.children
-  - api.Element.classList
-  - api.Element.className
-  - api.Element.closest
-  - api.Element.firstElementChild
-  - api.Element.getAttribute
-  - api.Element.getAttributeNS
-  - api.Element.getAttributeNames
-  - api.Element.getAttributeNode
-  - api.Element.getAttributeNodeNS
-  - api.Element.getElementsByClassName
-  - api.Element.getElementsByTagName
-  - api.Element.getElementsByTagNameNS
-  - api.Element.hasAttribute
-  - api.Element.hasAttributeNS
-  - api.Element.hasAttributes
-  - api.Element.id
-  - api.Element.insertAdjacentElement
-  - api.Element.insertAdjacentText
-  - api.Element.lastElementChild
-  - api.Element.localName
-  - api.Element.matches
-  - api.Element.namespaceURI
-  - api.Element.nextElementSibling
-  - api.Element.prefix
-  - api.Element.prepend
-  - api.Element.previousElementSibling
-  - api.Element.querySelector
-  - api.Element.querySelectorAll
-  - api.Element.remove
-  - api.Element.removeAttribute
-  - api.Element.removeAttributeNS
-  - api.Element.removeAttributeNode
-  - api.Element.replaceChildren
-  - api.Element.replaceWith
-  - api.Element.setAttribute
-  - api.Element.setAttributeNS
-  - api.Element.setAttributeNode
-  - api.Element.setAttributeNodeNS
-  - api.Element.tagName
-  - api.Element.toggleAttribute
-  - api.Event
-  - api.Event.Event
-  - api.Event.bubbles
-  - api.Event.cancelable
-  - api.Event.currentTarget
-  - api.Event.defaultPrevented
-  - api.Event.eventPhase
-  - api.Event.isTrusted
-  - api.Event.preventDefault
-  - api.Event.stopImmediatePropagation
-  - api.Event.stopPropagation
-  - api.Event.target
-  - api.Event.timeStamp
-  - api.Event.type
-  - api.EventTarget
-  - api.EventTarget.EventTarget
-  - api.EventTarget.addEventListener
-  - api.EventTarget.addEventListener.options_parameter.options_capture_parameter
-  - api.EventTarget.addEventListener.options_parameter.options_once_parameter
-  - api.EventTarget.addEventListener.options_parameter.options_passive_parameter
-  - api.EventTarget.addEventListener.options_parameter.options_signal_parameter
-  - api.EventTarget.dispatchEvent
-  - api.EventTarget.removeEventListener
   - api.HTMLCollection
   - api.HTMLCollection.item
   - api.HTMLCollection.length
   - api.HTMLCollection.namedItem
-  - api.MutationObserver
-  - api.MutationObserver.MutationObserver
-  - api.MutationObserver.disconnect
-  - api.MutationObserver.observe
-  - api.MutationObserver.takeRecords
-  - api.MutationRecord
-  - api.MutationRecord.addedNodes
-  - api.MutationRecord.attributeName
-  - api.MutationRecord.attributeNamespace
-  - api.MutationRecord.nextSibling
-  - api.MutationRecord.oldValue
-  - api.MutationRecord.previousSibling
-  - api.MutationRecord.removedNodes
-  - api.MutationRecord.target
-  - api.MutationRecord.type
   - api.NamedNodeMap
   - api.NamedNodeMap.getNamedItem
   - api.NamedNodeMap.getNamedItemNS
@@ -204,34 +54,6 @@ compat_features:
   - api.NamedNodeMap.removeNamedItemNS
   - api.NamedNodeMap.setNamedItem
   - api.NamedNodeMap.setNamedItemNS
-  - api.Node
-  - api.Node.appendChild
-  - api.Node.baseURI
-  - api.Node.childNodes
-  - api.Node.cloneNode
-  - api.Node.compareDocumentPosition
-  - api.Node.contains
-  - api.Node.firstChild
-  - api.Node.hasChildNodes
-  - api.Node.insertBefore
-  - api.Node.isDefaultNamespace
-  - api.Node.isEqualNode
-  - api.Node.isSameNode
-  - api.Node.lastChild
-  - api.Node.lookupNamespaceURI
-  - api.Node.lookupPrefix
-  - api.Node.nextSibling
-  - api.Node.nodeName
-  - api.Node.nodeType
-  - api.Node.nodeValue
-  - api.Node.normalize
-  - api.Node.ownerDocument
-  - api.Node.parentElement
-  - api.Node.parentNode
-  - api.Node.previousSibling
-  - api.Node.removeChild
-  - api.Node.replaceChild
-  - api.Node.textContent
   - api.NodeIterator
   - api.NodeIterator.filter
   - api.NodeIterator.nextNode
