--- a/features/input-date-time.yml
+++ b/features/input-date-time.yml
@@ -1,4 +1,4 @@
-name: <input> date, datetime-local, time, and week
+name: <input> with types date, datetime-local, time, and week
 description: The `<input>` element allows the user to input date and time information to a form.
 spec: https://html.spec.whatwg.org/multipage/input.html#date-state-(type=date)
 group:
