--- a/features/language.yml
+++ b/features/language.yml
@@ -1,5 +1,5 @@
 name: Language
-description: "The Navigator.language read-only property returns a string representing the preferred language of the user, usually the language of the browser UI. The Navigator.languages read-only property returns an array of strings representing the user's preferred languages."
+description: "The `navigator.language` read-only property returns a string representing the preferred language of the user, usually the language of the browser UI. The `navigator.languages` read-only property returns an array of strings representing the user's preferred languages."
 spec: https://html.spec.whatwg.org/multipage/system-state.html#language-preferences
 compat_features:
   - api.Navigator.language
